k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-warp-gw-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-warp-gw-ip"
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gke-warp-gw-deployment
                port:
                  number: 5666
